# joujou

./: Cargo.toml  README.md
src/: audio.rs  cast.rs  cli.rs  http.rs  main.rs  mpris.rs  net.rs  player.rs  scan.rs
src/player/: mpris.rs
