[package]
name = "joujou"
version = "0.1.0"
edition = "2021"
license = "GPL-3+"

[dependencies]
anyhow = "1.0.79"
arc-swap = "1.7.0"
axum = { version = "0.7.4", default-features = false, features = ["tokio", "http1", "http2"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
axum-range = "0.4.0"
bpaf = "0.9"
env_logger = { version = "0.11", default-features = false, features = ["auto-color", "humantime"], optional = true }
log = "0.4.20"
# mdns-sd uses if-addrs, but I dislike the way link-local is
# enabled via feature flag, so I'm considering local-ip-address instead.
#local-ip-address = "0.5.7"
# Maybe consider an alternative, I don't need the channels
mdns-sd = "0.10.4"
mpris-server = "0.8"
natord = "1.0.9"
rusqlite = "0.31.0"
rust_cast = { git = "https://github.com/g2p/rust-cast.git", branch = "async,queue", features = ["thread_safe"] }
#rust_cast = { path = "../../azasypkin/rust-cast" }
symphonia = { version = "0.5.3", default-features = false, features = ["flac", "ogg", "mkv", "mp3", "isomp4"] }
symphonia-metadata = "0.5.3"
tokio = { version = "1.36.0", features = ["macros", "net", "rt-multi-thread", "fs"] }
url = "2.5.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
walkdir = "2.4.0"

[features]
logging = ["dep:env_logger"]
